chore(backend): add backend serve script; ignore .venv and migrations
- Add console script in pyproject.toml: backend = "backend.main:main"
- Implement main() in src/backend/main.py to start Uvicorn
  - supports DEV=1 to enable reload, PORT for port override
- Update .gitignore to exclude .venv/ and migrations/ directories

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ venv = ".venv"
 venvPath = "."
 
 [project.scripts]
-backend = "backend:main"
+backend = "backend.main:main"
 
 [build-system]
 build-backend = "uv_build"
